fixed the padding on the projects section. Too small on the bottom.

--- a/css/styles.css
+++ b/css/styles.css
@@ -592,7 +592,7 @@ footer {
   background-color: #f5f5f5; }
   @media screen and (max-width: 599px) {
     #projects-section {
-      padding-bottom: 3rem; } }
+      padding-bottom: 4rem; } }
 
 .project {
   width: 100%; }
