--- a/scss/layouts/_content.scss
+++ b/scss/layouts/_content.scss
@@ -135,7 +135,7 @@
 #projects-section {
     background-color: $sectionbg;
     @include lt-sm {
-        padding-bottom: 3rem;
+        padding-bottom: 4rem;
     }
 }
 
